# CortexTheseus

./: .codecov.yml  .deepsource.toml  .gitignore  .gitmodules  .run.sh.swp  .travis.yml  CMakeLists.txt  CODINGSTYLE.md  COPYING  Dockerfile  Dockerfile.alltools  Makefile  README.md  appveyor.yml  checksum  client.go  codecov.yml  config.go  cvm.sh  cvm_gpu.sh  dnskey.json  eventLoop.go  flag.go  gen_block_json.go  gen_fileinfo_json.go  gen_filemeta_json.go  gen_receipt_json.go  gen_tx_json.go  genesis.json  go.mod  go.sum  infer_helper.go  infer_numpy.go  infer_test.go  infoServer.go  interfaces.go  main.go  makefile  miner.ini  miner.sh  (+26 more)
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  release-drafter.yml
CortexMiner/: .gitignore  gominer.h  main.cpp  makefile  minerBot.cpp  minerBot.h
PoolMiner/: .gitignore  Makefile  vec  vec.c  vecAddKernel.cl
accounts/: accounts.go  accounts_test.go  errors.go  errors_test.go  hd.go  hd_test.go  manager.go  sort.go  url.go  url_test.go
client/: ctxc_client.go  ctxc_client_test.go  ctxcclient_test.go  signer.go
cmake/: CMakeCache.txt  compile_commands.json
cminer/: .gitignore  README.md  config.xml  gominer.cc  gominer.h  main.cpp  makefile  minerBot.cpp  minerBot.h
common/: big.go  bytes.go  bytes_test.go  debug.go  format.go  main_test.go  path.go  size.go  size_test.go  storage_entry.go  test_utils.go  types.go  types_test.go  uri.go
config/: addrs.go  config.go
consensus/: consensus.go  errors.go
console/: bridge.go  bridge_test.go  console.go  console_test.go  prompter.go
core/: bench_test.go  block_validator.go  block_validator_test.go  blockchain.go  blockchain_insert.go  blockchain_reader.go  blockchain_repair_test.go  blockchain_sethead_test.go  blockchain_test.go  blocks.go  chain_indexer.go  chain_indexer_test.go  chain_makers.go  chain_makers_test.go  cvm.go  dao_test.go  error.go  events.go  evm.go  gaspool.go  gen_genesis.go  gen_genesis_account.go  genesis.go  genesis_alloc.go  genesis_test.go  headerchain.go  headerchain_test.go  helper_test.go  mkalloc.go  quotapool.go  sender_cacher.go  state_prefetcher.go  state_processor.go  state_quota.go  state_transition.go  tx_cacher.go  tx_journal.go  tx_list.go  tx_list_test.go  tx_noncer.go  (+5 more)
cortex-wiki/: InferGuide.md  JSON-RPC.md  README.md  hello_world_tutorial.md  home.md
cortexminer/: miner.go
crypto/: crypto.go  crypto_test.go  keccak.go  keccak_ziren.go  signature_cgo.go  signature_nocgo.go  signature_test.go
ctxc/: api.go  api_backend.go  api_debug_test.go  api_test.go  api_tracer.go  backend.go  bloombits.go  broadcast.go  config.go  discovery.go  dispatcher.go  dropper.go  gen_config.go  handler.go  handler_test.go  handshake.go  helper_test.go  metrics.go  peer.go  peerset.go  protocol.go  protocol_test.go  state_accessor.go  sync.go  sync_test.go  tracker.go
ctxcdb/: batch.go  database.go  database_test.go  iterator.go  snapshot.go
cuckoo/: Makefile  consensus.go  cuckoo_helper.go  cuckoo_new.h  cuckoo_verify.go
cuckoo_mean_miner/: Makefile  cuckoo_help.go
cvm-runtime/: .gitmodules  CMakeLists.txt  Makefile
dashboard/: README.md  assets.go  config.go  cpu.go  cpu_windows.go  dashboard.go  log.go  message.go
db/: batch.go  database.go  database_test.go  interface.go  iterator.go  memory_database.go
docker/: node.conf
eth/: api.go  api_backend.go  api_test.go  api_tracer.go  backend.go  bloombits.go  config.go  gen_config.go  handler.go  handler_test.go  helper_test.go  metrics.go  peer.go  peer_test.go  protocol.go  protocol_test.go  sync.go  sync_test.go
ethclient/: ethclient.go  ethclient_test.go  signer.go
ethdb/: database.go  database_test.go  interface.go  memory_database.go  redis_database.go
ethstats/: ethstats.go
event/: event.go  event_test.go  example_feed_test.go  example_scope_test.go  example_test.go  feed.go  (+6 more)
(+2503 files in other folders)
